k8s/django-service.yml
# k8s/django-service.yaml
# Django Pod로의 내부 트래픽을 담당하는 Service 정의

apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-ns
spec:
  selector:
    app: django-app          # 위 Deployment와 동일한 라벨
  ports:
    - name: http
      port: 80               # 클러스터 안에서 접근할 포트
      targetPort: 8000       # 실제 컨테이너 포트(Django)
  type: ClusterIP            # 내부 통신용 서비스 타입
