k8s/django-ingress.yml
# k8s/django-ingress.yaml
# 외부에서 HTTP로 접속할 수 있도록 해주는 Ingress 정의

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: django-ns
  annotations:
    # nginx ingress 컨트롤러를 사용한다고 가정
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: django.local        # 브라우저에서 접속할 도메인 이름
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
